<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="490dp"
        android:background="@drawable/main"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="84dp"
            android:textSize="30dp"
            android:text="@string/dia"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/textPass11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="148dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="numberPassword" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textPass11"
            android:layout_alignLeft="@+id/textView1"
            android:layout_marginBottom="80dp"
            android:text="@string/regs"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btnReg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textPass11"
            android:layout_marginTop="50dp"
            android:text="@string/reg" />

    </RelativeLayout>

</ScrollView>